--- a/Assignments/HW2/HW-2.ipynb
+++ b/Assignments/HW2/HW-2.ipynb
@@ -10,13 +10,14 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "FHU5WQ8kUtb3",
-        "outputId": "c18b5fd5-35b3-4952-dbfc-003275b301aa"
+        "outputId": "7e40441e-cc5d-4dd6-ec49-9fdcb57d452a"
       },
       "id": "FHU5WQ8kUtb3",
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,13 +82,14 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "WVXFUQgLV2-v",
-        "outputId": "d2b7d462-6ce4-494f-eb1a-0e0a7fabb69c"
+        "outputId": "77edb165-d56c-40ba-8b76-444f9a5a49ab"
       },
       "id": "WVXFUQgLV2-v",
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +199,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "MWuakZMGlZJ8",
         "outputId": "1bdc39e4-7d86-4752-911c-664f1f3c9354"
@@ -398,7 +401,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ipYFWrdsW0sW",
         "outputId": "12503ebf-79eb-47d7-f384-31381b55ba9f"
@@ -548,7 +552,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "GUXCUCgwrr-4",
         "outputId": "3dd39b5f-ffc5-408e-933c-14938b84ef6c"
@@ -588,7 +593,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "92pGuaRLtdYh",
         "outputId": "6bd6c81c-4ae0-4708-97f4-09503f25e530"
@@ -643,7 +649,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "SOx23HUSuz0k",
         "outputId": "aa1860ea-5796-4db3-d345-36b98f91ffb7"
@@ -795,13 +802,14 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "kzNv67_a6Zp9",
-        "outputId": "0b5cc48d-2f52-4569-cf18-aa44774cd71b"
+        "outputId": "9f2585de-6652-4224-f522-0812c2771d23"
       },
       "id": "kzNv67_a6Zp9",
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -865,7 +873,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Api_prVCKk8V",
         "outputId": "869cc232-72dd-47e5-998f-6dcdac74d236"
@@ -899,7 +908,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Fn6W3193PNQe",
         "outputId": "7000bf07-accb-4345-dfd1-bd2115bbb6db"
@@ -1017,13 +1027,14 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "DJ1GeSTteY9k",
-        "outputId": "c8026595-b313-48c5-a966-216f5fb73bfd"
+        "outputId": "85dd9536-07f4-4e38-a988-47db56d5ae5b"
       },
       "id": "DJ1GeSTteY9k",
-      "execution_count": 26,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1047,7 +1058,7 @@
           "height": 489
         },
         "id": "ba73ef87",
-        "outputId": "b92e3cf4-ba56-4358-b2e2-b756f3cb272e"
+        "outputId": "e253dd0a-9903-4160-d039-28d4cf43be0a"
       },
       "source": [
         "\n",
@@ -1063,7 +1074,7 @@
         "\n"
       ],
       "id": "ba73ef87",
-      "execution_count": 30,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1106,6 +1117,16 @@
       "id": "df50ceb8"
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "."
+      ],
+      "metadata": {
+        "id": "HzpHUVenVK6r"
+      },
+      "id": "HzpHUVenVK6r"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1113,7 +1134,7 @@
           "height": 504
         },
         "id": "02b20254",
-        "outputId": "e82cf222-dd9d-49f6-b07e-14ced436c468"
+        "outputId": "985dc411-81e4-4a45-c9d7-296f22e6f0f3"
       },
       "source": [
         "\n",
@@ -1136,7 +1157,7 @@
         "\n"
       ],
       "id": "02b20254",
-      "execution_count": 31,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1160,7 +1181,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**The results of Levene’s test (Test statistic = 0.1796, p = 0.9082) indicate that the assumption of homogeneity of variances is met. Since the p-value is much greater than 0.05, we fail to reject the null hypothesis that the group variances are equal. This suggests that the spread of engagement scores is consistent across groups, supporting the ANOVA assumption of equal variances.**"
+        "."
+      ],
+      "metadata": {
+        "id": "TgGAVXBtVSlt"
+      },
+      "id": "TgGAVXBtVSlt"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**The results of Levene’s test (Test statistic = 0.1796, p = 0.9082) indicate that the assumption of homogeneity of variances is met. Since the p-value is much greater than 0.05, we fail to reject the null hypothesis that the group variances are equal. This suggests that the spread of engagement scores is consistent across groups, supporting the ANOVA assumption of equal variances.**\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "."
       ],
       "metadata": {
         "id": "ZwafFh-byNmu"
@@ -1182,7 +1219,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "c87254a1",
         "outputId": "dd376b85-ef3e-4502-ee73-84fc459a0bfb"
@@ -1210,12 +1248,32 @@
     {
       "cell_type": "markdown",
       "source": [
+        "."
+      ],
+      "metadata": {
+        "id": "NMFKI4_aUHF7"
+      },
+      "id": "NMFKI4_aUHF7"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**The results support the alternative hypothesis. The ANOVA showed a strong effect of Platform on student engagement (F = 1639.53, p < 0.001), meaning that engagement levels differ across platforms. This suggests that the choice of learning platform affects how engaged students are, so the idea that all platforms are the same (the null hypothesis) is not supported.**"
       ],
       "metadata": {
         "id": "Hbz-Qzvw0l9c"
       },
       "id": "Hbz-Qzvw0l9c"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "."
+      ],
+      "metadata": {
+        "id": "X3kmvBbqUFtd"
+      },
+      "id": "X3kmvBbqUFtd"
     },
     {
       "cell_type": "markdown",
@@ -1240,11 +1298,12 @@
         "print(tukey)"
       ],
       "metadata": {
-        "id": "d0yZ4TtA01JX",
-        "outputId": "46ae300c-d6ab-47f6-af2f-7e33210bb0d7",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "d0yZ4TtA01JX",
+        "outputId": "46ae300c-d6ab-47f6-af2f-7e33210bb0d7"
       },
       "id": "d0yZ4TtA01JX",
       "execution_count": 36,
@@ -1271,7 +1330,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**The Tukey HSD test showed that student engagement was different between some platforms. Platform A had lower engagement than Platforms B and C, and Platform C had higher engagement than Platform D. The other comparisons were not significantly different. This helps us see exactly which platforms led to higher or lower engagement.**"
+        "."
+      ],
+      "metadata": {
+        "id": "1pakeMFzULZT"
+      },
+      "id": "1pakeMFzULZT"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**The Tukey HSD test showed that student engagement was different between some platforms. Platform A had lower engagement than Platforms B and C, and Platform C had higher engagement than Platform D. The other comparisons were not significantly different. This helps us see exactly which platforms led to higher or lower engagement.**\n",
+        "\n",
+        "\n",
+        ".\n"
       ],
       "metadata": {
         "id": "ybTsMF921YgQ"
@@ -1288,6 +1360,16 @@
         "id": "nOyRluUA0qE0"
       },
       "id": "nOyRluUA0qE0"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "."
+      ],
+      "metadata": {
+        "id": "4FJpy_XXUcct"
+      },
+      "id": "4FJpy_XXUcct"
     },
     {
       "cell_type": "markdown",
