--- a/Assignments/HW2/HW-2.ipynb
+++ b/Assignments/HW2/HW-2.ipynb
@@ -1268,16 +1268,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "."
-      ],
-      "metadata": {
-        "id": "X3kmvBbqUFtd"
-      },
-      "id": "X3kmvBbqUFtd"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "**Question 10.** If the data more strongly support the alternative hypothesis, perform Tukey's HSD post-hoc test to determine which levels of the treatment effect are significantly different from each other. If the data more strongly support the null hypothesis, explain why a post-hoc test would not be appropriate.\n"
       ],
       "metadata": {
@@ -1288,12 +1278,9 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "tukey = pairwise_tukeyhsd(endog=OLAE_data['Engagement'],\n",
         "                          groups=OLAE_data['Platform'],\n",
         "                          alpha=0.05)\n",
-        "\n",
         "\n",
         "print(tukey)"
       ],
@@ -1330,20 +1317,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "."
-      ],
-      "metadata": {
-        "id": "1pakeMFzULZT"
-      },
-      "id": "1pakeMFzULZT"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**The Tukey HSD test showed that student engagement was different between some platforms. Platform A had lower engagement than Platforms B and C, and Platform C had higher engagement than Platform D. The other comparisons were not significantly different. This helps us see exactly which platforms led to higher or lower engagement.**\n",
-        "\n",
-        "\n",
-        ".\n"
+        "**The Tukey HSD test showed that student engagement was different between some platforms. Platform A had lower engagement than Platforms B and C, and Platform C had higher engagement than Platform D. The other comparisons were not significantly different. This helps us see exactly which platforms led to higher or lower engagement.**"
       ],
       "metadata": {
         "id": "ybTsMF921YgQ"
@@ -1360,16 +1334,6 @@
         "id": "nOyRluUA0qE0"
       },
       "id": "nOyRluUA0qE0"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "."
-      ],
-      "metadata": {
-        "id": "4FJpy_XXUcct"
-      },
-      "id": "4FJpy_XXUcct"
     },
     {
       "cell_type": "markdown",
