--- a/Assignments/HW3/STAT-7220-HW3.ipynb
+++ b/Assignments/HW3/STAT-7220-HW3.ipynb
@@ -1,6 +1,80 @@
 {
   "cells": [
     {
+      "cell_type": "code",
+      "source": [
+        "# === COURSE REPO SETUP === #\n",
+        "import os\n",
+        "# 1. ENTER your GitHub username (the one that owns your fork)\n",
+        "github_username = \"shahrukh-malikk\"\n",
+        "\n",
+        "# 2. Name of the repo (don't change unless your fork name is different)\n",
+        "repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
+        "\n",
+        "# 3. Build the full repo URL for cloning\n",
+        "repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# --- Detect if we're already in a repo ---\n",
+        "cwd = os.getcwd()\n",
+        "if cwd.endswith(repo_name):\n",
+        "    print(f\"✅ Already inside repo folder: {cwd}\")\n",
+        "else:\n",
+        "    # --- If the repo folder exists, check if it's nested ---\n",
+        "    if os.path.exists(repo_name):\n",
+        "        print(f\"⚠️ Found existing folder '{repo_name}'. Skipping clone to avoid nesting.\")\n",
+        "    else:\n",
+        "        print(f\"📥 Cloning repo from {repo_url}...\")\n",
+        "        os.system(f\"git clone {repo_url}\")\n",
+        "\n",
+        "    # --- Change to repo directory ---\n",
+        "    if os.path.exists(repo_name):\n",
+        "        os.chdir(repo_name)\n",
+        "        print(f\"📂 Changed directory to: {os.getcwd()}\")\n",
+        "    else:\n",
+        "        print(\"❌ ERROR: Repo folder not found. Please check your GitHub username.\")\n",
+        "\n",
+        "# --- Check if this is the instructor's repo instead of student's fork ---\n",
+        "# This command needs to be run from within the repository directory\n",
+        "remote_url = os.popen(\"git config --get remote.origin.url\").read().strip()\n",
+        "\n",
+        "if \"abrown9008\" in remote_url:\n",
+        "   print(\"⚠️ WARNING: You are working in the instructor's repo, not your fork!\")\n",
+        "   print(\"💡 Please fork the repo to your own account and update `github_username` above.\")\n",
+        "else:\n",
+        "    print(f\"🔗 Connected to fork at: {remote_url}\")\n",
+        "\n",
+        "# Set Today's Directory #\n",
+        "\n",
+        "today_dir = \"Assignments/HW3\"\n",
+        "os.chdir(today_dir)\n",
+        "print(f\"📂 Changed directory to: {os.getcwd()}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "57whE8UJFULN",
+        "outputId": "35ecc679-e8bc-4dc6-d627-be44611decd9"
+      },
+      "id": "57whE8UJFULN",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "📥 Cloning repo from https://github.com/shahrukh-malikk/STAT-7220-Applied-Experimental-Design.git...\n",
+            "📂 Changed directory to: /content/STAT-7220-Applied-Experimental-Design/Assignments/HW2/STAT-7220-Applied-Experimental-Design/Assignments/HW3/STAT-7220-Applied-Experimental-Design\n",
+            "🔗 Connected to fork at: https://github.com/shahrukh-malikk/STAT-7220-Applied-Experimental-Design.git\n",
+            "📂 Changed directory to: /content/STAT-7220-Applied-Experimental-Design/Assignments/HW2/STAT-7220-Applied-Experimental-Design/Assignments/HW3/STAT-7220-Applied-Experimental-Design/Assignments/HW3\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "1a7f7a1f",
       "metadata": {
@@ -26,28 +100,163 @@
         "\n",
         "1.  Briefly describe the objective of the experiment.\n",
         "\n",
-        "2.  Specify the outcome variable and how it is measured.\n",
+        "To determine how sole material, insole thickness, and fabric breathability affects the comfort of a new running shoe model.\n",
         "\n",
-        "3.  Specify the independent variables. What lurking variables may be present?\n",
-        "\n",
-        "4.  Explain the difference between a full factorial design and a $2^k$ factorial design. Briefly comment on why the latter may be preferred in this case.\n",
-        "\n",
-        "5.  State the sets of null and alternative hypotheses for this experiment.\n",
-        "\n",
-        "6.  Perform appropriate exploratory analysis, including data visualizations. Do the results of these analyses support the null or alternative hypotheses more strongly?\n"
+        "\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "2.  Specify the outcome variable and how it is measured.\n",
+        "\n",
+        "Measurement: Each athlete rated shoe comfort on a scale from 1 to 10, where 1 = very uncomfortable and 10 = very comfortable.\n"
+      ],
+      "metadata": {
+        "id": "A-9MPC0bJQ0v"
+      },
+      "id": "A-9MPC0bJQ0v"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.  Specify the independent variables. What lurking variables may be present?\n",
+        "\n",
+        "The independent variables in this experiment are Sole Material (A), Insole Thickness (B), and Fabric Breathability (C), as these factors are purposely changed to examine their effect on comfort. However, several lurking variables may still influence the results, including athlete differences, Foot shape, treadmill conditions,Running style, fatigue levels and room temperature, all of which can unintentionally affect how each athlete perceives comfort during the test.\n"
+      ],
+      "metadata": {
+        "id": "48PWlgiHJORd"
+      },
+      "id": "48PWlgiHJORd"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4.  Explain the difference between a full factorial design and a $2^k$ factorial design. Briefly comment on why the latter may be preferred in this case.\n",
+        "\n",
+        "A full factorial design tests all combinations of all factor levels, which can require many runs. A **2K** factorial design uses only two levels per factor, making it a smaller and more efficient version of a full factorial. It is preferred here because it provides useful information about main effects and interactions while keeping the number of shoe tests manageable."
+      ],
+      "metadata": {
+        "id": "jJZKiv6UIq5A"
+      },
+      "id": "jJZKiv6UIq5A"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "5.  State the sets of null and alternative hypotheses for this experiment.\n",
+        "\n",
+        "**Null and Alternative Hypotheses**\n",
+        "\n",
+        "**Factor A (Sole Material**)\n",
+        "\n",
+        "HO: Changing the sole material does not change the average comfort rating.\n",
+        "\n",
+        "H1: Changing the sole material does change the average comfort rating.\n",
+        "This tests whether sole material matters for comfort.\n",
+        "\n",
+        "**Factor B (Insole Thickness)**\n",
+        "\n",
+        "HO: Insole thickness has no effect on the average comfort rating.\n",
+        "\n",
+        "H1: Insole thickness affects the average comfort rating.\n",
+        "This checks if thicker insoles improve or reduce comfort.\n",
+        "\n",
+        "**Factor C (Fabric Breathability)**\n",
+        "\n",
+        "HO: Fabric breathability does not influence comfort.\n",
+        "\n",
+        "H1: Fabric breathability influences comfort.\n",
+        "This tests whether mesh vs. woven fabric changes how comfortable the shoe feels.\n",
+        "\n",
+        "**Two-Way Interactions**\n",
+        "\n",
+        "These hypotheses check whether the effect of one factor depends on another.\n",
+        "\n",
+        "A x B Interaction\n",
+        "\n",
+        "HO: The effect of sole material does not depend on insole thickness.\n",
+        "\n",
+        "H1: The effect of sole material does depend on insole thickness.\n",
+        "\n",
+        "A x C Interaction\n",
+        "\n",
+        "HO: The effect of sole material does not depend on fabric breathability.\n",
+        "\n",
+        "H1: The effect of sole material depends on fabric breathability.\n",
+        "\n",
+        "BxC Interaction\n",
+        "\n",
+        "HO: The effect of insole thickness does not depend on fabric breathability.\n",
+        "\n",
+        "H1: The effect of insole thickness depends on fabric breathability.\n",
+        "\n",
+        "**Three-Way Interaction**\n",
+        "\n",
+        "This checks whether all three factors jointly influence comfort.\n",
+        "\n",
+        "A x B x C Interaction\n",
+        "\n",
+        "HO: There is no combined three-factor interaction among A, B, and C.\n",
+        "\n",
+        "H1: There is a combined three-factor interaction among A, B, and C.\n",
+        "\n",
+        "**Explation**\n",
+        "In this experiment, we test whether each factor and their interactions influence comfort. For Sole Material (A), the hypotheses are H0: A has no effect on mean comfort and H1: A does affect mean comfort. For Insole Thickness (B), H0: B has no effect, and H1: B has an effect. For Fabric Breathability (C), H0: C has no effect, and H1: C has an effect. We also test interactions: for AxB, H0: there is no interaction, and H1: an interaction exists; similarly for AxC and BxC. Finally, for the three-way interaction AxBxC, H0: no combined interaction among the three factors, and H1: a three-way interaction exists. In simple terms, the experiment tests whether each factor individually affects comfort and whether the effect of one factor depends on the levels of the others.\n"
+      ],
+      "metadata": {
+        "id": "WiUStZE8IJWg"
+      },
+      "id": "WiUStZE8IJWg"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6.  Perform appropriate exploratory analysis, including data visualizations. Do the results of these analyses support the null or alternative hypotheses more strongly?"
+      ],
+      "metadata": {
+        "id": "q6Wg9gGAH8KR"
+      },
+      "id": "q6Wg9gGAH8KR"
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "38d9acd9",
       "metadata": {
         "id": "38d9acd9"
       },
       "outputs": [],
       "source": [
-        "## Question 6 Code ##"
+        "## Question 6 Code ##\n",
+        "\n",
+        "\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import statsmodels.api as sm\n",
+        "from statsmodels.formula.api import ols\n",
+        "\n",
+        "df = pd.read_excel(\"Shoe Comfort Experiment.xlsx\")\n",
+        "#df.head()\n",
+        "df.describe()\n",
+        "group_desc = df.groupby(['sole_material','insole_thickness','breathability'])['comfort'].describe()\n",
+        "#group_desc.head()\n",
+        "sns.set(style=\"whitegrid\", context=\"talk\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.set(style=\"whitegrid\", context=\"talk\")\n"
+      ],
+      "metadata": {
+        "id": "xn5xU-cUHjrq"
+      },
+      "id": "xn5xU-cUHjrq",
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
