--- a/Assignments/HW3/STAT-7220-HW3.ipynb
+++ b/Assignments/HW3/STAT-7220-HW3.ipynb
@@ -1353,90 +1353,98 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 75,
       "id": "7d8941c3",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 911
+          "base_uri": "https://localhost:8080/"
         },
         "id": "7d8941c3",
-        "outputId": "72e273c3-d4cb-41a5-e820-1950577c5a58"
+        "outputId": "01496a31-68c2-4a1c-da63-74072b6b9116"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                                                  sum_sq    df           F  \\\n",
-            "Intercept                                     121.658350   1.0  124.536350   \n",
-            "sole_material                                   5.564969   1.0    5.696617   \n",
-            "insole_thickness                                0.661288   1.0    0.676932   \n",
-            "breathability                                   0.063498   1.0    0.065000   \n",
-            "sole_material:insole_thickness                  0.303143   1.0    0.310314   \n",
-            "sole_material:breathability                     0.000661   1.0    0.000676   \n",
-            "insole_thickness:breathability                  1.013879   1.0    1.037864   \n",
-            "sole_material:insole_thickness:breathability    0.641055   1.0    0.656220   \n",
-            "Residual                                       15.630245  16.0         NaN   \n",
+            "ANOVA Table (Type III):\n",
+            "                                                sum_sq   df            F  \\\n",
+            "Intercept                                   223.603333  1.0  1924.159197   \n",
+            "C(GPS_Accuracy)                              19.476267  1.0   167.597849   \n",
+            "C(Battery_Life)                               7.592425  1.0    65.334596   \n",
+            "C(Display)                                   26.169688  1.0   225.196309   \n",
+            "C(GPS_Accuracy):C(Battery_Life)               1.820024  1.0    15.661736   \n",
+            "C(GPS_Accuracy):C(Display)                   19.811297  1.0   170.480863   \n",
+            "C(Battery_Life):C(Display)                    5.163206  1.0    44.430601   \n",
+            "C(GPS_Accuracy):C(Battery_Life):C(Display)         NaN  1.0          NaN   \n",
+            "Residual                                      0.929667  8.0          NaN   \n",
             "\n",
-            "                                                    PR(>F)  \n",
-            "Intercept                                     5.847132e-09  \n",
-            "sole_material                                 2.969092e-02  \n",
-            "insole_thickness                              4.227386e-01  \n",
-            "breathability                                 8.020093e-01  \n",
-            "sole_material:insole_thickness                5.851966e-01  \n",
-            "sole_material:breathability                   9.795748e-01  \n",
-            "insole_thickness:breathability                3.234770e-01  \n",
-            "sole_material:insole_thickness:breathability  4.297816e-01  \n",
-            "Residual                                               NaN  \n"
+            "                                                  PR(>F)  \n",
+            "Intercept                                   8.049463e-11  \n",
+            "C(GPS_Accuracy)                             1.200088e-06  \n",
+            "C(Battery_Life)                             4.053896e-05  \n",
+            "C(Display)                                  3.840427e-07  \n",
+            "C(GPS_Accuracy):C(Battery_Life)             4.191749e-03  \n",
+            "C(GPS_Accuracy):C(Display)                  1.124062e-06  \n",
+            "C(Battery_Life):C(Display)                  1.582253e-04  \n",
+            "C(GPS_Accuracy):C(Battery_Life):C(Display)           NaN  \n",
+            "Residual                                             NaN  \n",
+            "\n",
+            "Partial Eta-Squared Values:\n",
+            "C(GPS_Accuracy): 0.9544\n",
+            "C(Battery_Life): 0.8909\n",
+            "C(Display): 0.9657\n"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "'GPS_Accuracy'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3805\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3806\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32mindex.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mindex.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'GPS_Accuracy'",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-790147225.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0meffect\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'GPS_Accuracy'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Battery_Life'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Display'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mss_effect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0manova_table\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0meffect\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'sum_sq'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mpartial_eta_squared\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0meffect\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mss_effect\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mss_effect\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mss_error\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1181\u001b[0m             \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1182\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_is_scalar_access\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1183\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtakeable\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_takeable\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1184\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_tuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1185\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_get_value\u001b[0;34m(self, index, col, takeable)\u001b[0m\n\u001b[1;32m   4219\u001b[0m             \u001b[0;31m#  results if our categories are integers that dont match our codes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4220\u001b[0m             \u001b[0;31m# IntervalIndex: IntervalTree has no get_loc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4221\u001b[0;31m             \u001b[0mrow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4222\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4223\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3810\u001b[0m             ):\n\u001b[1;32m   3811\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mInvalidIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3812\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3813\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3814\u001b[0m             \u001b[0;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'GPS_Accuracy'"
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/statsmodels/base/model.py:1894: ValueWarning: covariance of constraints does not have full rank. The number of constraints is 1, but rank is 0\n",
+            "  warnings.warn('covariance of constraints does not have full '\n",
+            "/usr/local/lib/python3.12/dist-packages/statsmodels/base/model.py:1923: RuntimeWarning: invalid value encountered in divide\n",
+            "  F /= J\n"
           ]
         }
       ],
       "source": [
-        "## Question 12 Code ##\n",
-        "\n",
-        "\n",
         "import pandas as pd\n",
         "import statsmodels.api as sm\n",
         "from statsmodels.formula.api import ols\n",
-        "modeldata = ols('Satisfaction ~ C(GPS_Accuracy) * C(Battery_Life) * C(Display)', data=data).fit()\n",
-        "anova_table = sm.stats.anova_lm(mod, typ=3)\n",
+        "\n",
+        "# Fit factorial ANOVA model\n",
+        "model = ols('Satisfaction ~ C(GPS_Accuracy) * C(Battery_Life) * C(Display)', data=data).fit()\n",
+        "\n",
+        "# Type III ANOVA table\n",
+        "anova_table = sm.stats.anova_lm(model, typ=3)\n",
+        "print(\"ANOVA Table (Type III):\")\n",
         "print(anova_table)\n",
+        "\n",
+        "# Error (residual) SS\n",
         "ss_error = anova_table.loc['Residual', 'sum_sq']\n",
         "\n",
-        "## Calculate Partial Eta-Squared ##\n",
+        "# Calculate partial eta-squared for main effects\n",
         "partial_eta_squared = {}\n",
+        "effects = ['C(GPS_Accuracy)', 'C(Battery_Life)', 'C(Display)']\n",
         "\n",
-        "for effect in ['GPS_Accuracy', 'Battery_Life', 'Display']:\n",
+        "for effect in effects:\n",
         "    ss_effect = anova_table.loc[effect, 'sum_sq']\n",
         "    partial_eta_squared[effect] = ss_effect / (ss_effect + ss_error)\n",
         "\n",
         "print(\"\\nPartial Eta-Squared Values:\")\n",
         "for k, v in partial_eta_squared.items():\n",
-        "    print(f\"{k}: {v}\")"
+        "    print(f\"{k}: {v:.4f}\")\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The partial η² values show that all three factors have extremely large effects on user satisfaction. Display size has the strongest effect (η² = 0.9657), meaning it explains about 97% of the variance after accounting for other factors. GPS accuracy also has a very large impact (η² = 0.9544), and battery life shows a similarly strong effect (η² = 0.8909). These results indicate that improving any of these features will substantially increase satisfaction, with display and GPS accuracy being the most influential."
+      ],
+      "metadata": {
+        "id": "cu9qV6HI0gQW"
+      },
+      "id": "cu9qV6HI0gQW"
     },
     {
       "cell_type": "markdown",
@@ -1447,6 +1455,16 @@
       "source": [
         "13. Summarize your conclusions. Which combination of factors would you recommend to the fitness band manufacturer? Why?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Display has the strongest effect on satisfaction, followed by GPS accuracy and battery life. All three main effects are statistically significant, meaning each feature plays an important role in user satisfaction. Based on these results, the best combination is a large display, high GPS accuracy, and long battery life, which together produce the highest satisfaction scores and would be my recommendation to the manufacture."
+      ],
+      "metadata": {
+        "id": "o3aCDnFO0_sg"
+      },
+      "id": "o3aCDnFO0_sg"
     }
   ],
   "metadata": {
